move http code from deprecated AndroidClient to recommanded URLConnection